# Recommendation-Systems

./: main.py  pyproject.toml
II/: II.py
MF/: MF_1.py  MF_2.py  MF_3.py
UU/: UU.py  preprocess.py  preprocess2dict.py  preprocess_shrink.py
