[project]
name = "recommendation-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "keras>=3.11.3",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "sortedcontainers>=2.4.0",
    "tensorflow>=2.20.0",
]
